# LLM-Pipeline-Full

./: .gitignore  CHANGES_SUMMARY.md  EVALUATION_GUIDE.md  EXPERIMENTS.md  EXPERIMENT_SURVEY.md  QUICK_START_EVALUATION.md  README.md  RUN_WITHOUT_LLM.md  experiment_survey_cases.py  find_best_temperature.py  generate_results_standalone.py  main.py  main_file.py  pyproject.toml  requirements.txt  run_experiment.py  setup.sh  setup_linux.sh  setup_mac.sh  setup_server.sh
data/apps/: setup_and_run.py
data/apps/Damn-Vulnerable-Bank/DamnVulnerableBank/app/: google-services.json
expiriments/: analysis (1).json  analysis.json  experiment_results (1).json  experiment_results.json  expiriment_survey_cases.py  generated_summaries.json  summaries_used.json  temperature_search_20260329_055940 (1).json
src/: generate_results.py
src/clustering/: clustering.py  codebert_clustering.py  file_clustering.py
src/evaluation/: llm_evaluator.py  summary_metrics.py
src/parsers/: objects.py  parsing.py  parsingwdw.py
src/scipts/: test_clustering.py  test_parser.py  test_suite.py  testmobsf.py
src/summarizing/: enhanced_summarizer.py  file_context_summarizer.py  new.py  summarizer.py
